# voxelC

./: .gitignore  CMakeLists.txt  README.md  ghiuyasdf
include/: fastnoise.h  glad.h
shaders/: fragment_shaders.glsl  vertex_shaders.glsl
src/: block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  gfx_libs.h  glad.c  input.c  input.h  main.c  player.c  player.h  shader.h  texture.c  texture.h  types.h  window.c  window.h  world.c  world.h
